<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">Projet_Medical</string>
    <string name="title_activity_accueil__cabinet_">Private Medical Office</string>
    <string name="title_activity_rendez__vous_">Appointment</string>
    <string name="nom_cabinet">Nom Cabinet :</string>
    <string name="adresse_cabinet">Adresse Cabinet :</string>
    <string name="n_fix">N° Fix :</string>
    <string name="geolocalisation">Geolocation</string>
    <string name="rendez_vous"><![CDATA[Appointment -->]]></string>
    <string name="email">E-mail</string>
    <string name="mot_de_passe">password</string>
    <string name="connexion">Log in</string>
    <string name="memoriser_mes_identifiants">Memorize my credentials</string>
    <string name="creer_un_compte">Create an account</string>
    <string name="nom">Name</string>
    <string name="prenom">First name</string>
    <string name="numero_de_telephone">Phone number</string>
    <string name="suivant">next</string>
    <string name="retour">back</string>
    <string name="envoyer">send</string>
    <string name="plus_informations">- More information -</string>
    <string name="service_medical_priv">Private Medical Service</string>
    <string name="cabinet_mohamed_mansour">office Mohamed Mansour</string>
    <string name="Tunis_8016">Tunis 8016</string>
    <string name="nom_cab2">office Mohamed LArbi</string>
    <string name="nom_cab3">office Ben Mansour</string>
    <string name="nom_cab4">office Ahmed Chouchen</string>
    <string name="nom_cab5">office Kamel Sallah</string>
    <string name="nom_cab6">office Ahmed Kamoun</string>
    <string name="nom_cab7">office Ben Friha</string>
    <string name="adresse_cab1">Nabuel 2 - Rue de la plage</string>
    <string name="adresse_cab2">Tunis- Mohamed Khames</string>
    <string name="adresse_cab3">Nabuel-8050</string>
    <string name="adresse_cab4">Nabuel-8000</string>
    <string name="adresse_cab5">Nabuel-8070</string>
    <string name="adresse_cab6">Nabuel-8090</string>
    <string name="test1">office Mohamed Mansour</string>
    <string name="test2">office Mohamed LArbi</string>
    <string name="test3">office Ben Mansour</string>
    <string name="test4">office Ahmed Chouchen</string>
    <string name="test5">office Kamel Sallah</string>
    <string name="test6">office Ahmed Kamoun</string>
    <string name="test7">office Ben Friha</string>
    <string name="service_nest_pas_dispo">This service is not currently available, it will start on: 01/01/2020</string>
    <string name="rendezVous">Appointment</string>
    <string name="nous_vous_contact">We will contact you soon on the number</string>
    <string name="merci">Thank you ..!, Sir / madam </string>
    <string name="compte_creer">Your account has been successfully created</string>
    <string name="ok">okey</string>
    <string name="inscri">for your registration</string>
</resources>
