<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Traitement_Compte_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp">

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:layout_marginTop="@dimen/_10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:inputType="text"/>

        <EditText
            android:id="@+id/N_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_de_telephone"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"/>


        <Button
            android:layout_marginTop="@dimen/_10dp"
            android:id="@+id/B_suivat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="B_confermer"
            android:text="@string/suivant"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/blanc"
            android:textSize="@dimen/_20sp"
            android:background="@drawable/custom_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/Remarque_compte"
            android:textColor="@color/Rouge"
            android:textSize="@dimen/_10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ok"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:onClick="B_ok"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            android:id="@+id/retour"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:onClick="retour_compte"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>