<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Information_Cabinet"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="B_affiche"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="277dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginRight="@dimen/_20dp"
                android:background="@drawable/ic_retour"
                android:onClick="Retour" />


            <ImageView
                android:id="@+id/image_Info"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginRight="@dimen/_20dp" />

            <RatingBar
                android:id="@+id/myRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_gravity="center_horizontal"
                android:numStars="5" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_cabinet"
                android:textColor="@color/Noir"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Nom_C"
                android:textColor="@color/Noir"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresse_cabinet"
                android:textColor="@color/Noir"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Adresse_C"
                android:textColor="@color/Noir" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_fix"
                android:textColor="@color/Noir"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Num_Fix_C"
                android:textColor="@color/Noir" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_phone"
                android:onClick="appel"
                android:layout_marginLeft="@dimen/_20dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Geolocalisation_C"
                android:text="@string/geolocalisation"
                android:onClick="Geolocalisation_Cabinet"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RendezVous_C"
                android:text="@string/rendez_vous"
                android:layout_marginLeft="50dp"
                android:onClick="RendezVous_Cabinet"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>